<resources>
    <string name="app_name">Favor</string>
    <string name="email_hint">Enter CUI Email</string>
    <string name="password_hint">Password</string>
    <string name="username_hint">Full Name</string>
    <string name="home">Home</string>
    <string name="store">Store</string>
    <string name="chat">Messages</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="login_button">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="connect_using_google">Connect using Google</string>
    <string name="are_you_a_new_user">Are you a new User?</string>
    <string name="sign_up">Sign up</string>
    <string name="take_photo">Take Photo</string>
    <string name="new_post">New Post</string>
    <string name="notifications">Notifications</string>
    <string name="sign_in"> Sign in</string>
    <string name="search">Search</string>
    <string name="favor">Favor</string>
    <string name="store_topbar">Store</string>
    <string name="home_topbar">Home</string>
    <string name="messages">Messages</string>
    <string name="affirmation1">I am strong.</string>
    <string name="affirmation2">I believe in myself.</string>
    <string name="affirmation3">Each day is a new opportunity to grow and be a better version of myself.</string>
    <string name="affirmation4">Every challenge in my life is an opportunity to learn from.</string>
    <string name="affirmation5">I have so much to be grateful for.</string>
    <string name="affirmation6">Good things are always coming into my life.</string>
    <string name="affirmation7">New opportunities await me at every turn.</string>
    <string name="affirmation8">I have the courage to follow my heart.</string>
    <string name="affirmation9">Things will unfold at precisely the right time.</string>
    <string name="affirmation10">I will be present in all the moments that this day brings.</string>
    <string name="userOne">Khaleeq Ahmad</string>
    <string name="userTwo">Muhammad Rehan</string>
    <string name="userThree">Sarmad Sohaib</string>
    <string name="userFour">Rana Hamza</string>
    <string name="userFive">Laeeq Ahmad</string>
    <string name="userSix">Qasim Ali</string>
    <string name="userSeven">Arslan Khan</string>
    <string name="userEight">Sohaib Khan</string>
    <string name="userNine">Aqib Ali</string>
    <string name="userTen">Sajawal Gujjar</string>
    <string name="userLevel">Level 2</string>
    <string name="postDate">May 22, 2022</string>
    <string name="logout">Logout</string>
    <string name="ask_favor">Ask Favor</string>
    <string name="respond">Respond</string>
    <string name="like">Like</string>
    <string name="type_description_here">Type Description Here</string>
    <string name="date">Sat, 24, 2022</string>
    <string name="level">Level 3</string>
    <string name="user_name">Khaleeq Ahmad</string>
    <string name="number_of_likes">0</string>
    <string name="user_level">User Level</string>
    <string name="post_desc">post_desc</string>
    <string name="close">Close</string>
    <string name="message_hint">message_hint</string>
    <string name="sample_user_name">User Name</string>
    <string name="online_status">Online</string>
    <string name="share_post">Share Post</string>
    <string name="post">Post</string>
    <string name="upload_a_document">Upload a Document</string>
    <string name="upload_a_picture">Upload a Picture</string>
    <string name="what_s_on_your_mind">Enter post description. Photo is also required to post.</string>
    <string name="post_for_favor">Post for favor</string>
    <string name="feed">Feed</string>
    <string name="post_in_feed">Post in Feed</string>
    <string name="post_type_favor">Favor</string>
    <string name="search_favor">Search Favor</string>
    <string name="buy_sale"><![CDATA[Buy & Sale]]></string>
    <string name="select_image">Select Image</string>
    <string name="select_document">Select Document</string>
    <string name="pick_color">Pick Color</string>
    <string name="selected_image">Selected Image</string>
    <string name="lost_found"><![CDATA[Lost & Found]]></string>
    <string name="cover_photo">Cover Photo</string>
    <string name="change_cover_photo">Change Cover Photo</string>
    <string name="posts">Posts</string>
    <string name="activity">Activity</string>
    <string name="about">About</string>
    <string name="version_1_0">Version 1.0</string>
    <string name="change_profile_photo">Change Profile Photo</string>
    <string name="recent_post_photo">Recent Post Photo</string>
    <string name="your_recent_post">Your recent post</string>
    <string name="click_to_messages_him">Click to messges him</string>
    <string name="inbox">inbox</string>
    <string name="message">Message</string>
    <string name="inbox_cap">Inbox</string>
    <string name="create_account">Create Account</string>
    <string name="profession">Profession</string>
    <string name="dob">DOB</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="already_a_user">Already a user?</string>
    <string name="connect_using_cui">Connect Using CUI</string>
    <string name="name">User Name</string>
    <string name="forget_password">Forget Password?</string>
    <string name="create_new_account">Create a new account</string>
    <string name="reset_password">Reset Password</string>
    <string name="confirm_your_email_and_we_ll_send_the_instructions">Confirm your email and we\'ll send the instructions.</string>
    <string name="send_code">Send Code</string>
    <string name="please_check_your_email">Please check your email</string>
    <string name="department">Department</string>
    <string name="enter_your_cui_email">Enter your CUI email</string>
    <string name="registration_no">Registration No.</string>
    <string name="dept">Dept…</string>
    <string name="details">Details</string>
    <string name="show_time">Show Time</string>
    <string name="select_post_type">Select Post type</string>
    <string name="share">Share</string>
    <string name="content_description_media" />
    <string name="rs_5000">Rs: 5000</string>
    <string name="click_here_to_respond">Click Here to Respond</string>
    <string name="share_with_friends">Share with friends</string>
    <string name="rs">Rs:</string>
    <string name="price">"Rs:    "</string>
    <string name="full_name">Full Name</string>
    <string name="computer_science">Computer Science</string>
    <string name="suffix">\@students.cuisahiwal.edu.pk</string>
    <string name="cui_email">CUI Email</string>
    <string name="cui_mail">\@students.cuisahiwal.edu.pk</string>
    <string name="batch">Batch</string>
    <string name="sp19">SP19</string>
    <string name="bcs">BCS</string>
    <string name="discipline">Discipline</string>
    <string name="_027">027</string>
    <string name="reg_no">Reg No.</string>
    <string name="_0">0</string>
    <string name="login_with_fingerprint">Already logged in? Use fingerprint</string>
    <string name="deletepost">delete_post</string>
    <string name="delete_post">deletePost</string>

    <string-array name="Departments">
       <item>Computer Science</item>
       <item>Mechanical Engineering</item>
       <item>Electrical and Computer Engineering</item>
       <item>Civil Engineering</item>
       <item>Biosciences</item>
       <item>Mathematics</item>
       <item>Management Sciences</item>
       <item>Heritage Studies</item>
    </string-array>

    <string-array name="Year">
        <item>SP19</item>
        <item>FA19</item>
        <item>SP20</item>
        <item>FA20</item>
        <item>SP21</item>
        <item>FA21</item>
        <item>SP22</item>
        <item>FA22</item>
    </string-array>

    <string-array name="Discipline">
        <item>BAF</item>
        <item>BBA</item>
        <item>BBC</item>
        <item>BCS</item>
        <item>BEE</item>
        <item>BEN</item>
        <item>BME</item>
        <item>BSE</item>
        <item>BSI</item>
        <item>CVE</item>
        <item>FSN</item>
        <item>MB4</item>
        <item>RBS</item>
        <item>RCS</item>
        <item>RMM</item>
        <item>RMS</item>
        <item>RMT</item>
    </string-array>

</resources>